--- a/css/main.css
+++ b/css/main.css
@@ -157,13 +157,31 @@
     }
 */
 /*--------------------------------*/
-#btnRegister {
-    background-color: white;
-    font-size: 22px;
-    width: 75px;
-    height: 50px;
+
+.mainlogin {
+    position:absolute;
+    top:25%;
+    left:40%;
 }
 
+    .mainlogin h1 {
+        color:white;
+        text-align:center;
+    }
+
+    #txtAccount, #txtPassword, #btnLogin, #ltlMessage, #btnLogout, #btnRegister {
+        background-color: white;
+        color: black;
+        font-family: Consolas;
+        font-size: 22pt;
+    }
+
+    #btnLogin {
+        float:left;
+    }
+#btnRegister {
+    float: right;
+}
 
 #btnwebLogin {
     background-color: white;
@@ -181,15 +199,40 @@
     float: inherit;
     margin: 0 auto;
     width: auto;
-    height: 100%
+    height: 100%;
+    /*background-color:red;*/
 }
 
 .memberstatusleft {
     float: left;
-    width: 60%;
+    width: 40%;
     height: 100%;
+    position: relative;
 }
+    .memberstatusleft .Notify {
+        position: absolute;
+        top: 30%;
+        right: 0px;
+    }
+        .memberstatusleft .Notify #btnNotify {
+            border: none;
+            outline: none;
+            background-color: transparent;
+            font-size:32px;
+        }
+        .memberstatusleft #Notifycount {
+            position: absolute;
+            top: 30%;
+            right: 0px;
+            z-index:999;
+        }
 
+        .memberstatuscenter {
+            float: left;
+            width: 20%;
+            height: 100%;
+            text-align: right;
+        }
     .memberstatusleft span {
         float: right;
     }
@@ -214,12 +257,17 @@
     position: fixed;
     z-index: -999;
     border: 1px solid black;
-    height: 100px;
+    height: 130px;
     width: 300px;
     background-color: white;
     text-align: left;
     bottom: 30px;
     right: 50px;
+    overflow: scroll;
+}
+
+.Notifytext input {
+    border:none;
 }
 
     .Notifytext h3 {
