--- a/Main.Master
+++ b/Main.Master
@@ -15,8 +15,6 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/jquery.min.js"></script>
     <style>
-
-
         .span1 {
             color: white;
             font-size: 16pt;
@@ -167,25 +165,29 @@
                                         <div class="Notify">
                                             <button id="btnNotify" type="button" onclick="Notifytoggle();">🔔</button>
                                             <div class="Notifytext">
-                                                <h3>通知：</h3>
-                                                <asp:Repeater ID="rptMemberFollows" runat="server" OnItemCommand="rptMemberFollows_ItemCommand">
-                                                    <ItemTemplate>
-                                                        <asp:Label ID="Label1" runat="server">
-                                                            <%--<a href="DisplayPost.aspx?CboardID=<%#Eval("CboardID")%>&PostID=<%#Eval("PostID")%>#<%#Eval("Floor")%>">--%>
-                                                            <asp:Button ID="Button1" runat="server" CommandName='<%#Eval("PostID")%>' CommandArgument='<%#Eval("CboardID")+" "+Eval("Floor")+" "+ Eval("PostID")%>' Text='<%# !(bool)Eval("Replied")
+                                                <div class="Notifytextpos">
+                                                    <h3>通知：</h3>
+                                                    <asp:Repeater ID="rptMemberFollows" runat="server" OnItemCommand="rptMemberFollows_ItemCommand">
+                                                        <ItemTemplate>
+                                                            <asp:Label ID="Label1" runat="server">
+                                                                <%--<a href="DisplayPost.aspx?CboardID=<%#Eval("CboardID")%>&PostID=<%#Eval("PostID")%>#<%#Eval("Floor")%>">--%>
+                                                                <asp:Button ID="Button1" runat="server" CommandName='<%#Eval("PostID")%>' CommandArgument='<%#Eval("CboardID")+" "+Eval("Floor")+" "+ Eval("PostID")%>' Text='<%# !(bool)Eval("Replied")
                                                                 ? Eval("PointID") == null 
                                                                    ? Eval("LastEditTime") == null 
                                                                         ? string.Format("新文章:「{0}」 {1}", Eval("Title"), Eval("PostDate", "{0:yyyy/MM/dd}")) 
                                                                         : string.Format("新文章:「{0}」 {1}", Eval("Title"), Eval("LastEditTime", "{0:yyyy/MM/dd}"))
                                                                     : Eval("LastEditTime") == null 
-                                                                        ? string.Format("第{0}樓 新回復:「{1}」 {2}", Eval("Floor"), Eval("PostCotent"), Eval("PostDate", "{0:yyyy/MM/dd}"))
-                                                                        : string.Format("第{0}樓 新回復:「{1}」 {2}", Eval("Floor"), Eval("PostCotent"), Eval("LastEditTime", "{0:yyyy/MM/dd}")) 
+                                                                        ? string.Format("新回復:「{1}」({0}F) {2}", Eval("Floor"), Eval("PostCotent"), Eval("PostDate", "{0:yyyy/MM/dd}"))
+                                                                        : string.Format("新回復:「{1}」({0}F) {2}", Eval("Floor"), Eval("PostCotent"), Eval("LastEditTime", "{0:yyyy/MM/dd}")) 
                                                                 : ""%>'></asp:Button>
-                                                        </asp:Label>
-                                                        <br />
-                                                    </ItemTemplate>
-                                                </asp:Repeater>
+                                                            </asp:Label>
+                                                            <br />
+                                                            <hr />
+                                                        </ItemTemplate>
+                                                    </asp:Repeater>
+                                                </div>
                                             </div>
+
                                         </div>
                                     </div>
 
