--- a/css/main.css
+++ b/css/main.css
@@ -336,3 +336,47 @@ a:active {
 #btnNotify {
     background-color: transparent;
 }
+
+/*--------------------------------*/
+
+    .ahome h1 {
+        text-align: center;
+        background-color: transparent;
+        font-size: 28px;
+        border-radius: 5px;
+    }
+
+        .ahome h1:hover {
+            text-align: center;
+            background-color: transparent;
+            font-size: 32px;
+            border: 3px white solid;
+            border-radius: 5px;
+            background-color: deepskyblue;
+        }
+
+/*#btnPBEdit2 {*/
+    /*text-align:center;*/
+    /*float:right;
+}*/
+
+
+#PBDataList_normal2 table {
+    margin: auto;
+}
+
+    .PboardID h3 {
+        margin-bottom: 15px;
+        background-color: transparent;
+        font-size: 28px;
+        text-align:center;
+    }
+
+    .PboardID h3:hover {
+        margin-bottom: 15px;
+        background-color: transparent;
+        font-size: 28px;
+        border: 3px white solid;
+        border-radius: 5px;
+        background-color: #0D6EFD;
+    }
