--- a/css/main.css
+++ b/css/main.css
@@ -339,12 +339,17 @@ a:active {
 
 /*--------------------------------*/
 
-    .ahome h1 {
-        text-align: center;
-        background-color: transparent;
-        font-size: 28px;
-        border-radius: 5px;
-    }
+.ahome h1 {
+    text-align: center;
+    background-color: transparent;
+    font-size: 28px;
+    border-radius: 5px;
+    border: 3px white solid;
+    border-radius: 5px;
+    background-color: #F1CDCE;
+    margin-bottom: 0px;
+    color: black;
+}
 
         .ahome h1:hover {
             text-align: center;
@@ -353,22 +358,27 @@ a:active {
             border: 3px white solid;
             border-radius: 5px;
             background-color: deepskyblue;
+            color:white;
         }
 
-/*#btnPBEdit2 {*/
-    /*text-align:center;*/
-    /*float:right;
-}*/
+#btnPBEdit2 {
 
-
-#PBDataList_normal2 table {
-    margin: auto;
 }
 
+#PBDataList_normal2 {
+    background: url("../images/door.png") no-repeat;
+    background-size: 100%;
+}
+
+    #PBDataList_normal2 table {
+        margin: 0px;
+        margin: auto;
+    }
+
     .PboardID h3 {
-        margin-bottom: 15px;
+        margin: 15px 0px;
         background-color: transparent;
-        font-size: 28px;
+        font-size: 24px;
         text-align:center;
     }
 
