--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-* {
+#form1 {
     /*background-color: #181717;*/
-    background-color: #070100;
+    background-color: #0F0016;
     /*     background-color: blue; */
 }
 /*---------SU-3/30增加---------*/
