--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,20 @@
 #form1 {
     /*background-color: #181717;*/
-    background-color: #0F0016;
+    /* background-color: #0F0016; */
+    background-color: transparent;
     /*     background-color: blue; */
     color:rgba(255, 248, 240, 0.93)
+}
+.container .video{
+    z-index:-1;
+}
+.container video{
+    position: fixed;
+    left:0;
+  top:0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 a{
     color:rgba(255, 248, 240, 0.93);
