--- a/css/CboardsPage.css
+++ b/css/CboardsPage.css
@@ -74,7 +74,7 @@ img{
 
 }
 .PostA:hover img{
-    transform:  scale(1.15);
+    transform:  scale(1.08);
     -webkit-filter: brightness(105%); /* Safari */
     filter: brightness(105%);
 
@@ -139,8 +139,8 @@ img{
         .Cboard .content .article {
             padding: 10px;
             margin: 15px;
-            border-bottom: 0.5px double #b34d11;
-            box-shadow: 1px 1px 7px #e76c25;line-height: 100px;text-align: left;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 12px;
+            /* box-shadow: 1px 1px 7px #e76c25;line-height: 100px;text-align: left; */
             transition: 0.4s;
 
         }
