--- a/css/CreatePost.css
+++ b/css/CreatePost.css
@@ -15,8 +15,8 @@ hr{
     margin: 5px;
     font-family:'moubi';
     text-shadow: 2px 2px 2px #270c0c;
-    border-bottom: 0.5px double #b34d11;
-    box-shadow: 1px 1px 7px #e76c25;text-align: left;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 12px;
+    text-align: left;
     font-size: 18px;
 }
         .zenbu td{
@@ -83,13 +83,13 @@ hr{
     width: 97.5%;
     font-family:'moubi';
     text-shadow: 2px 2px 2px #270c0c;
-    border-bottom: 1px double #e76c25;
-    box-shadow: 2px 2px 4px #e76c25;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 12px;
     font-size: 22px;
 }
 .kobi input{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 2px 12px;
     border: 1px ridge #e76c25;
-    box-shadow: 2px 1px 4px #e76c25;text-align: center;
+    text-align: center;
     border-radius:10px;
     cursor:pointer;
 }
@@ -109,7 +109,7 @@ hr{
 .cbtn{
     font-family:'moubi';
     text-shadow: 2px 2px 2px #270c0c;
-    border: 1px ridge #e76c25;
+    border: 1px none #e76c25;
     box-shadow: 2px 2px 6px #e76c25;text-align: center;
     font-size: 22px;
     border-radius:10px;
